--- a/second/index.html
+++ b/second/index.html
@@ -1,1 +1,26 @@
-<!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html lang="en">
+    <link rel="stylesheet" href="./reset.css">
+    <link rel="stylesheet" href="./index.css">
+    <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+</head>
+<body>
+    <header class= "top-box">
+        <div class= "purple-box"></div>
+        <div class= "green-box"></div>
+        <div class= "circle-box"></div>
+    </header>
+    <div class= "box-two">
+     <div class="inner-box"></div>
+    </div>
+    <div class="last-box">
+        <div class="text">
+            Hello Class
+        </div>
+    </div>
+</body>
+</html>
