--- a/first/index.html
+++ b/first/index.html
@@ -1,1 +1,40 @@
-<!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+<!DOCTYPE html>
+<html lang="en">
+    <link rel="stylesheet" href="./reset.css">
+    <link rel="stylesheet" href="./index.css">
+    <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
+    
+</head>
+<body>
+      
+   <header></header> 
+    <div class='box-one'></div>
+    <footer></footer>
+
+
+ 
+  
+</body>
+</html><!-- Put your HTML HERE, make sure to connect your index.css sheet -->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
